# HARPY

./: .dockerignore  .env.offline  .env.online  .gitignore  ADAPTERS.md  AGENTS.md  BACKLOG_PHASE2_4.md  Cargo.toml  DEMO.md  Makefile  PHASE_0_COMPLETE.md  README.md  TEAM_ALIGNMENT.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/intel/market/: route.ts
apps/web/src/app/api/intel/news/: route.ts
apps/web/src/components/HUD/: AlertStack.tsx  CommandPalette.tsx  EntityDetailPanel.tsx  ExportModal.tsx  GraphQuery.tsx  HUD.module.css  HUD.tsx  IntelPanel.tsx  Timeline.tsx  TrackInspector.tsx
apps/web/src/components/Logic/: URLManager.tsx
apps/web/src/components/Map/: CesiumViewer.tsx
apps/web/src/hud/: DataLinkBar.tsx  LayersPanel.tsx  PresetsBar.tsx  VisionPanel.tsx
apps/web/src/mocks/: mock-streamer.ts
apps/web/src/runtime/: mockStream.ts  useHarpyRuntime.ts
apps/web/src/scene/: CesiumScene.tsx
apps/web/src/state/: store.ts  types.ts
apps/web/src/store/: useStore.ts
apps/web/src/workers/: cluster-worker.ts  pack-worker.ts  track-index-worker.ts  ws-decode-worker.ts
apps/web/tests/: phase-proof.spec.ts
crates/harpy-core/: Cargo.toml
crates/harpy-core/src/: config.rs  error.rs  lib.rs
crates/harpy-health/: Cargo.toml
crates/harpy-health/src/: circuit_breaker.rs  freshness.rs  lib.rs
crates/harpy-proto/: Cargo.toml  build.rs
crates/harpy-proto/src/: lib.rs
deploy/helm/harpy/: Chart.yaml  README.md  values-govcloud.yaml  values.yaml
deploy/helm/harpy/templates/: _helpers.tpl  deployments.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml  services.yaml
deploy/k8s/base/: configmap.yaml  deployments.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml  serviceaccount.yaml  services.yaml
deploy/k8s/govcloud/: README.md  kustomization.yaml
docs/: DEMO_SCRIPT.md  PROD_READINESS.md
docs/archive/: PHASE_0_COMPLETE.md
evidence/: code_review.json  confidence_report.json  logical_inspection.json  testing.json
migrations/: 001_initial_schema.sql  002_snapshot_model.sql
proto/: harpy.proto
proto/harpy/v1/: harpy.proto
scripts/: confidence_gate.sh  dev.sh  local_production_readiness.sh  refactor_completion_confidence_gate.sh  run_local_prod.sh
services/harpy-aip/: Cargo.toml  Dockerfile
services/harpy-aip/src/: main.rs  tools.rs  validation.rs
services/harpy-detect/: Dockerfile  README.md  app.py
services/harpy-fusion/: Cargo.toml  Dockerfile
services/harpy-fusion/src/: main.rs  redis_consumer.rs  redis_publisher.rs  rules.rs
services/harpy-graph/: Cargo.toml  Dockerfile
services/harpy-graph/src/: main.rs  queries.rs
services/harpy-ingest/: Cargo.toml  Dockerfile
services/harpy-ingest/src/: main.rs
services/harpy-ingest/src/adapters/: adsb_mock.rs  adsb_opensky.rs  mod.rs  open_data_catalog.rs  radar_nexrad.rs  seismic_usgs.rs  tle_celestrak.rs  tle_mock.rs  weather_nws.rs
services/harpy-ingest/src/snapshot/: mod.rs  model.rs  storage.rs
services/harpy-ingest/src/storage/: mod.rs  postgres_store.rs  redis_store.rs
services/harpy-node/: Cargo.toml  Dockerfile
services/harpy-node/src/: main.rs
services/harpy-node/src/adapters/: adsb_mock.rs  adsb_opensky.rs  ground_mock.rs  mod.rs  tle_celestrak.rs  tle_mock.rs
services/harpy-node/tests/: ws_contract.rs
services/harpy-relay/: Cargo.toml  Dockerfile
services/harpy-relay/src/: backpressure.rs  main.rs  playback.rs  redis_subscriber.rs  seek.rs  subscription.rs
