[package]
name = "harpy-aip"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harpy-aip"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true

harpy-core = { path = "../../crates/harpy-core" }
