[package]
name = "harpy-fusion"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harpy-fusion"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dashmap.workspace = true
h3o.workspace = true

harpy-core = { path = "../../crates/harpy-core" }
