[package]
name = "harpy-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
dashmap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prost.workspace = true

harpy-proto = { path = "../../crates/harpy-proto" }
