[package]
name = "harpy-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "harpy-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
dashmap.workspace = true
reqwest.workspace = true
url.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

harpy-proto = { path = "../../crates/harpy-proto" }
