[package]
name = "harpy-relay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harpy-relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
redis.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
dashmap.workspace = true
sqlx.workspace = true

harpy-proto = { path = "../../crates/harpy-proto" }
harpy-core = { path = "../../crates/harpy-core" }
harpy-health = { path = "../../crates/harpy-health" }
